@@ -81,6 +81,7 @@ Feature wishes:
 - PR#352: new option "-stdin" to make ocaml read stdin as a script
 - PR#5199: tests are run only for bytecode if either native support is missing,
   or a non-empty value is set to "BYTECODE_ONLY" Makefile variable
+- PR#5297: compiler now checks existence of builtin primitives
 - PR#5236: new '%revapply' primitive with the semantics 'revapply x f = f x',
     and '%apply' with semantics 'apply f x = f x'.
 - PR#5329: (Windows) more efficient Unix.select if all fd's are sockets
